# mcp-unreal

./: .gitignore  .gitmodules  README.md  pyproject.toml  pyrightconfig.json  ue_exec.py
.cursor/: mcp.json
.github/: copilot-instructions.md
plugins/: pyrightconfig.json
plugins/ue_python_server/: ue_server.py  ue_server_autostart.py  unreal.pyi
src/mcp_unreal/: __init__.py  __main__.py  cli.py  knowledge.py  server.py  ue_remote.py
