[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-unreal"
version = "0.1.0"
description = "MCP stdio server for executing Python scripts in Unreal Engine 5"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.9.0",
    "anyio>=4.5.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-unreal = "mcp_unreal.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_unreal"]

[tool.hatch.metadata]
allow-direct-references = true
